--- a/CourseScheduleApp/app/src/main/res/layout/activity_add.xml
+++ b/CourseScheduleApp/app/src/main/res/layout/activity_add.xml
@@ -18,8 +18,8 @@
             android:id="@+id/ed_course_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:maxLength="255"/>
+            android:maxLength="255"
+            android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Spinner
@@ -29,8 +29,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:paddingVertical="12dp"
-        android:entries="@array/day" />
+        android:entries="@array/day"
+        android:paddingVertical="12dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,19 +45,30 @@
             android:orientation="horizontal">
 
             <ImageButton
-                style="@style/Base.Widget.AppCompat.ImageButton"
                 android:id="@+id/ib_start_time"
+                style="@style/Base.Widget.AppCompat.ImageButton"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:onClick="showDatePicker"
                 android:src="@drawable/ic_time" />
 
-            <TextView
-                android:id="@+id/tv_start_time"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/start_time" />
+
+                <TextView
+                    android:id="@+id/tv_start_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textPrimary" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -66,19 +77,30 @@
             android:orientation="horizontal">
 
             <ImageButton
-                style="@style/Base.Widget.AppCompat.ImageButton"
                 android:id="@+id/ib_end_time"
+                style="@style/Base.Widget.AppCompat.ImageButton"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:onClick="showDatePicker"
                 android:src="@drawable/ic_time" />
 
-            <TextView
-                android:id="@+id/tv_end_time"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/end_time" />
+
+                <TextView
+                    android:id="@+id/tv_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/textPrimary" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
@@ -92,8 +114,8 @@
             android:id="@+id/ed_lecturer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:maxLength="255"/>
+            android:maxLength="255"
+            android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -107,6 +129,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:lines="4"/>
+            android:lines="4" />
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
